Fixed UI jumping on desktop

--- a/src/screens/home/swap-form/swap-form.module.css
+++ b/src/screens/home/swap-form/swap-form.module.css
@@ -28,6 +28,7 @@
     justify-content: flex-end;
     margin-bottom: var(--2-step);
     color: var(--hint-color);
+    min-height: 19px;
 }
 
 .icons_div{
